name:                hamath
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/triplepointfive/hamath#readme
license:             BSD3
license-file:        LICENSE
author:              Ilya Smelkov
maintainer:          triplepointfive@gmail.com
copyright:           2016 Ilya Smelkov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hamath.Draw
                     , Hamath.Map
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , mtl
                     , sdl2
                     , aeson
  default-language:    Haskell2010

executable hamath-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hamath
                     , sdl2
                     , linear
                     , lens
                     , mtl
                     , time
                     , containers
  default-language:    Haskell2010

test-suite hamath-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hamath
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/triplepointfive/hamath
